Update roadmap and enhance navigation structure across multiple pages

--- a/about.html
+++ b/about.html
@@ -29,12 +29,26 @@
                 <span></span>
             </div>
             <div class="nav-links">
-                <a href="index.html">EDR Telemetry</a>
-                <a href="blog.html">Blog</a>
-                <a href="scores.html">Scores</a>
-                <a href="roadmap.html">Roadmap</a>
-                <a href="premium_services.html">Premium Services</a>
-                <a href="about.html" class="active">About</a>
+                <div class="nav-item">
+                    <a href="index.html">Home</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#" class="parent">EDR Telemetry</a>
+                    <div class="subnav">
+                        <a href="eligibility.html">Eligibility Criteria</a>
+                        <a href="scores.html">Scores</a>
+                        <a href="roadmap.html">Roadmap</a>
+                    </div>
+                </div>
+                <div class="nav-item">
+                    <a href="blog.html">Blog</a>
+                </div>
+                <div class="nav-item">
+                    <a href="premium_services.html" class="active">Premium Services</a>
+                </div>
+                <div class="nav-item">
+                    <a href="about.html">About</a>
+                </div>
             </div>
         </div>
     </nav>
