--- a/blog.html
+++ b/blog.html
@@ -76,12 +76,26 @@
                 <span></span>
             </div>
             <div class="nav-links">
-                <a href="index.html">EDR Telemetry</a>
-                <a href="blog.html" class="active">Blog</a>
-                <a href="scores.html">Scores</a>
-                <a href="roadmap.html">Roadmap</a>
-                <a href="premium_services.html">Premium Services</a>
-                <a href="about.html">About</a>
+                <div class="nav-item">
+                    <a href="index.html">Home</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#" class="parent">EDR Telemetry</a>
+                    <div class="subnav">
+                        <a href="eligibility.html">Eligibility Criteria</a>
+                        <a href="scores.html">Scores</a>
+                        <a href="roadmap.html">Roadmap</a>
+                    </div>
+                </div>
+                <div class="nav-item">
+                    <a href="blog.html">Blog</a>
+                </div>
+                <div class="nav-item">
+                    <a href="premium_services.html" class="active">Premium Services</a>
+                </div>
+                <div class="nav-item">
+                    <a href="about.html">About</a>
+                </div>
             </div>
         </div>
     </nav>
@@ -137,6 +151,20 @@
                  <span class="blog-link">Read More →</span>
              </div>
          </a>
+
+            <a href="https://medium.com/@kostas-ts/unveiling-the-gaps-linux-edr-telemetry-in-focus-1290a010ad1b?sk=2f3ced9dbd47c83acd9e6b8fe26af119" 
+               target="_blank" 
+               class="blog-card">
+                <img src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*GOW7Yy8CvBlMsSWAchbICA.png" 
+                     alt="Linux EDR Telemetry Analysis" 
+                     class="blog-image"
+                     onerror="this.src='images/linux_telemetry.png'; this.onerror=null;">
+                <div class="blog-content">
+                    <h2 class="blog-title">Unveiling the Gaps: Linux EDR Telemetry in Focus</h2>
+                    <p class="blog-excerpt">Discover the current state of Linux EDR telemetry, examining the challenges and opportunities in Linux security monitoring.</p>
+                    <span class="blog-link">Read More →</span>
+                </div>
+            </a>
         </div>
     </div>
 
