--- a/contact.html
+++ b/contact.html
@@ -16,12 +16,35 @@
 <body>
     <!-- Navigation Bar -->
     <nav>
-        <a href="index.html">EDR Telemetry</a>
-        <a href="blog.html">Blog</a>
-        <a href="scores.html">Scores</a>
-        <a href="roadmap.html">Roadmap</a>
-        <a href="sponsorship.html">Sponsorship</a>
-        <a href="about.html">About</a>
+        <div class="nav-container">
+            <div class="menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="nav-links">
+                <div class="nav-item">
+                    <a href="index.html">Home</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#" class="parent">EDR Telemetry</a>
+                    <div class="subnav">
+                        <a href="eligibility.html">Eligibility Criteria</a>
+                        <a href="scores.html">Scores</a>
+                        <a href="roadmap.html">Roadmap</a>
+                    </div>
+                </div>
+                <div class="nav-item">
+                    <a href="blog.html">Blog</a>
+                </div>
+                <div class="nav-item">
+                    <a href="premium_services.html" class="active">Premium Services</a>
+                </div>
+                <div class="nav-item">
+                    <a href="about.html">About</a>
+                </div>
+            </div>
+        </div>
     </nav>
 
     <div class="hero-section">
