--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,10 @@
                     <a href="premium_services.html" class="active">Premium Services</a>
                 </div>
                 <div class="nav-item">
-                    <a href="about.html">About</a>
+                    <a href="about.html" class="parent">About</a>
+                    <div class="subnav">
+                        <a href="sponsorship.html">Support Us</a>
+                    </div>
                 </div>
             </div>
         </div>
