--- a/sponsorship.html
+++ b/sponsorship.html
@@ -39,12 +39,29 @@
                 <span></span>
             </div>
             <div class="nav-links">
-                <a href="index.html">EDR Telemetry</a>
-                <a href="blog.html">Blog</a>
-                <a href="scores.html">Scores</a>
-                <a href="roadmap.html">Roadmap</a>
-                <a href="sponsorship.html" class="active">Sponsorship</a>
-                <a href="about.html">About</a>
+                <div class="nav-item">
+                    <a href="index.html">Home</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#" class="parent">EDR Telemetry</a>
+                    <div class="subnav">
+                        <a href="eligibility.html">Eligibility Criteria</a>
+                        <a href="scores.html">Scores</a>
+                        <a href="roadmap.html">Roadmap</a>
+                    </div>
+                </div>
+                <div class="nav-item">
+                    <a href="blog.html">Blog</a>
+                </div>
+                <div class="nav-item">
+                    <a href="premium_services.html" class="active">Premium Services</a>
+                </div>
+                <div class="nav-item">
+                    <a href="about.html" class="parent">About</a>
+                    <div class="subnav">
+                        <a href="sponsorship.html">Support Us</a>
+                    </div>
+                </div>
             </div>
         </div>
     </nav>
@@ -57,7 +74,7 @@
             <div class="sponsorship-quick-nav">
                 <a href="#one-time" class="quick-nav-item">
                     <span class="icon">💝</span>
-                    One-time Donation
+                    One-time Support
                 </a>
                 <a href="#monthly" class="quick-nav-item highlight">
                     <span class="icon">⭐</span>
