Add "Contact Us" link to subnavigation in multiple pages

--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,7 @@
                     <a href="about.html" class="parent">About</a>
                     <div class="subnav">
                         <a href="sponsorship.html">Support Us</a>
+                        <a href="contact.html">Contact Us</a>
                     </div>
                 </div>
             </div>
