--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,8 @@
     <meta charset="UTF-8">
     <title>Blog - EDR Telemetry Project</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/christmas-theme.css">
+    <script src="js/christmas.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <style>
@@ -103,7 +105,7 @@
             </div>
         </div>
     </nav>
-
+    <div class="snow-container" id="snow"></div>
     <div class="hero-section">
         <div class="hero-content">
             <h1>EDR Telemetry Blog</h1>
