--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link to Google Fonts for better typography -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/christmas-theme.css">
+    <script src="js/christmas.js" defer></script>
 </head>
 <body>
     <nav>
@@ -57,6 +59,7 @@
     </nav>
 
     <div class="hero-section">
+        <div class="snow-container" id="snow"></div>
         <div class="hero-content">
             <h1>Transform Your<br>EDR Telemetry Understanding</h1>
             <p>Comprehensive analysis and comparison of Endpoint Detection and Response capabilities across multiple platforms, helping you make informed security decisions.</p>
