--- a/linux.html
+++ b/linux.html
@@ -14,8 +14,10 @@
     <title>EDR Telemetry Project - Linux</title>
     <!-- Link to external CSS -->
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/christmas-theme.css">
     <!-- Meta tag for mobile responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="js/christmas.js" defer></script>
 </head>
 <body>
     <!-- Updated Navigation Bar -->
@@ -61,7 +63,7 @@
             <p>Explore detailed telemetry capabilities and comparisons for Linux-based EDR solutions.</p>
         </div>
     </div>
-
+    <div class="snow-container" id="snow"></div>
     <div class="content-section">
         <!-- Add Legend Section -->
         <div class="legend-container">
