--- a/windows.html
+++ b/windows.html
@@ -14,8 +14,10 @@
     <title>EDR Telemetry Project - Windows</title>
     <!-- Link to external CSS -->
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/christmas-theme.css">
     <!-- Meta tag for mobile responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="js/christmas.js" defer></script>
 </head>
 <body>
     <!-- Updated Navigation Bar -->
@@ -54,8 +56,9 @@
             </div>
         </div>
     </nav>
-
+    <div class="snow-container" id="snow"></div>
     <div class="hero-section">
+        <div class="snow-container" id="snow"></div>
         <div class="hero-content">
             <h1>Windows EDR Telemetry</h1>
             <p>Explore detailed telemetry capabilities and comparisons for Windows-based EDR solutions.</p>
@@ -166,7 +169,6 @@
         });
     </script>
 
-    <!-- Link to external JavaScript -->
     <script src="js/windows_res_pull.js"></script>
 </body>
 </html>
