--- a/premium_services.html
+++ b/premium_services.html
@@ -94,12 +94,30 @@
                 <span></span>
             </div>
             <div class="nav-links">
-                <a href="index.html">EDR Telemetry</a>
-                <a href="blog.html">Blog</a>
-                <a href="scores.html">Scores</a>
-                <a href="roadmap.html">Roadmap</a>
-                <a href="premium_services.html" class="active">Premium Services</a>
-                <a href="about.html">About</a>
+                <div class="nav-item">
+                    <a href="index.html">Home</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#" class="parent">EDR Telemetry</a>
+                    <div class="subnav">
+                        <a href="eligibility.html">Eligibility Criteria</a>
+                        <a href="scores.html">Scores</a>
+                        <a href="roadmap.html">Roadmap</a>
+                    </div>
+                </div>
+                <div class="nav-item">
+                    <a href="blog.html">Blog</a>
+                </div>
+                <div class="nav-item">
+                    <a href="premium_services.html" class="active">Premium Services</a>
+                </div>
+                <div class="nav-item">
+                    <a href="about.html" class="parent">About</a>
+                    <div class="subnav">
+                        <a href="sponsorship.html">Support Us</a>
+                        <a href="contact.html">Contact Us</a>
+                    </div>
+                </div>
             </div>
         </div>
     </nav>
