--- a/scores.html
+++ b/scores.html
@@ -14,10 +14,12 @@
     <title>EDR Telemetry Project - Scores</title>
     <!-- Link to external CSS -->
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/christmas-theme.css">
     <!-- Meta tag for mobile responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link to Google Fonts for better typography -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+    <script src="js/christmas.js" defer></script>
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -29,17 +31,36 @@
                 <span></span>
             </div>
             <div class="nav-links">
-                <a href="index.html">EDR Telemetry</a>
-                <a href="blog.html">Blog</a>
-                <a href="scores.html" class="active">Scores</a>
-                <a href="roadmap.html">Roadmap</a>
-                <a href="premium_services.html">Premium Services</a>
-                <a href="about.html">About</a>
+                <div class="nav-item">
+                    <a href="index.html">Home</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#" class="parent">EDR Telemetry</a>
+                    <div class="subnav">
+                        <a href="eligibility.html">Eligibility Criteria</a>
+                        <a href="scores.html">Scores</a>
+                        <a href="roadmap.html">Roadmap</a>
+                    </div>
+                </div>
+                <div class="nav-item">
+                    <a href="blog.html">Blog</a>
+                </div>
+                <div class="nav-item">
+                    <a href="premium_services.html" class="active">Premium Services</a>
+                </div>
+                <div class="nav-item">
+                    <a href="about.html" class="parent">About</a>
+                    <div class="subnav">
+                        <a href="sponsorship.html">Support Us</a>
+                        <a href="contact.html">Contact Us</a>
+                    </div>
+                </div>
             </div>
         </div>
     </nav>
 
     <div class="hero-section scores-hero">
+        <div class="snow-container" id="snow"></div>
         <div class="hero-content">
             <h1>EDR Telemetry Scores</h1>
             <p class="hero-description">Compare and analyze the performance metrics of different EDR solutions based on their telemetry capabilities.</p>
