--- a/scores.html
+++ b/scores.html
@@ -29,12 +29,30 @@
                 <span></span>
             </div>
             <div class="nav-links">
-                <a href="index.html">EDR Telemetry</a>
-                <a href="blog.html">Blog</a>
-                <a href="scores.html" class="active">Scores</a>
-                <a href="roadmap.html">Roadmap</a>
-                <a href="premium_services.html">Premium Services</a>
-                <a href="about.html">About</a>
+                <div class="nav-item">
+                    <a href="index.html">Home</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#" class="parent">EDR Telemetry</a>
+                    <div class="subnav">
+                        <a href="eligibility.html">Eligibility Criteria</a>
+                        <a href="scores.html">Scores</a>
+                        <a href="roadmap.html">Roadmap</a>
+                    </div>
+                </div>
+                <div class="nav-item">
+                    <a href="blog.html">Blog</a>
+                </div>
+                <div class="nav-item">
+                    <a href="premium_services.html" class="active">Premium Services</a>
+                </div>
+                <div class="nav-item">
+                    <a href="about.html" class="parent">About</a>
+                    <div class="subnav">
+                        <a href="sponsorship.html">Support Us</a>
+                        <a href="contact.html">Contact Us</a>
+                    </div>
+                </div>
             </div>
         </div>
     </nav>
@@ -136,6 +154,18 @@
             </div>
         </section>
     </div>
+    <!-- Add Mobile Navigation Script -->
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const menuToggle = document.querySelector('.menu-toggle');
+            const navLinks = document.querySelector('.nav-links');
+            
+            menuToggle?.addEventListener('click', () => {
+                menuToggle.classList.toggle('active');
+                navLinks?.classList.toggle('active');
+            });
+        });
+    </script>
     <!-- Include scripts in correct order -->
     <script src="js/scoring.js"></script>
     <script src="js/scores.js"></script>
