Add "Contribute" link to navigation across multiple pages and update consultation section with Calendly widget

--- a/about.html
+++ b/about.html
@@ -51,6 +51,7 @@
                 <div class="nav-item">
                     <a href="about.html" class="parent">About</a>
                     <div class="subnav">
+                        <a href="contribute.html">Contribute</a>
                         <a href="sponsorship.html">Support Us</a>
                         <a href="contact.html">Contact Us</a>
                     </div>
