--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <div class="nav-item">
                     <a href="about.html" class="parent">About</a>
                     <div class="subnav">
+                        <a href="contribute.html">Contribute</a>
                         <a href="sponsorship.html">Support Us</a>
                         <a href="contact.html">Contact Us</a>
                     </div>
