--- a/scores.html
+++ b/scores.html
@@ -51,6 +51,7 @@
                 <div class="nav-item">
                     <a href="about.html" class="parent">About</a>
                     <div class="subnav">
+                        <a href="contribute.html">Contribute</a>
                         <a href="sponsorship.html">Support Us</a>
                         <a href="contact.html">Contact Us</a>
                     </div>
