--- a/about.html
+++ b/about.html
@@ -91,10 +91,10 @@
             <div class="about-card">
                 <h2>Contribute</h2>
                 <ul>
-                    <li><a href="https://github.com/tsale/EDR-Telemetry" target="_blank">GitHub Repository</a></li>
+                    <li><a href="contribute.html" target="_blank">Contribution Page</a></li>
                     <li><a href="https://detect.fyi/edr-telemetry-project-a-comprehensive-comparison-d5ed1745384b" target="_blank">Read the Blog Post</a></li>
                     <li>Submit issues and suggestions</li>
-                    <li>Join our community</li>
+                    <li><a href="sponsorship.html#one-time" target="_blank">Join our community</a></li>
                 </ul>
             </div>
         </div>
