Add heading link functionality and enhance ineligible solutions section

--- a/about.html
+++ b/about.html
@@ -62,13 +62,13 @@
     <div class="about-container">
         <div class="snow-container" id="snow"></div>
         <div class="about-header">
-            <h1>About the EDR Telemetry Project</h1>
+            <h1 id="about-project">About the EDR Telemetry Project</h1>
             <p>A comprehensive comparison of EDR solutions based on their telemetry capabilities, helping organizations make informed security decisions.</p>
         </div>
 
         <div class="about-grid">
             <div class="about-card">
-                <h2>Project Goals</h2>
+                <h2 id="project-goals">Project Goals</h2>
                 <ul>
                     <li>Compare EDR telemetry data collection</li>
                     <li>Identify platform strengths and weaknesses</li>
@@ -78,7 +78,7 @@
             </div>
 
             <div class="about-card">
-                <h2>Data Collection</h2>
+                <h2 id="data-collection">Data Collection</h2>
                 <ul>
                     <li>Controlled environment testing</li>
                     <li>Process monitoring analysis</li>
@@ -88,7 +88,7 @@
             </div>
 
             <div class="about-card">
-                <h2>Contribute</h2>
+                <h2 id="how-to-contribute">Contribute</h2>
                 <ul>
                     <li><a href="contribute.html" target="_blank">Contribution Page</a></li>
                     <li><a href="https://detect.fyi/edr-telemetry-project-a-comprehensive-comparison-d5ed1745384b" target="_blank">Read the Blog Post</a></li>
