--- a/contribute.html
+++ b/contribute.html
@@ -58,7 +58,7 @@
         <div class="contribute-hero">
             <div class="contribute-header">
                 <div class="header-badge">Contributing Guide</div>
-                <h1>How to Contribute</h1>
+                <h1 id="how-to-contribute">How to Contribute</h1>
                 <p>Join our community of contributors and help improve EDR telemetry understanding</p>
             </div>
         </div>
@@ -67,7 +67,7 @@
             <div class="contribute-grid">
                 <div class="contribute-card intro">
                     <div class="icon">📝</div>
-                    <h3>About Contributions</h3>
+                    <h3 id="about-contributions">About Contributions</h3>
                     <p>We welcome all kinds of contributions to the EDR_telem.json file. Use our tools to make contributing easier:</p>
                     <ul class="feature-list">
                         <li><span class="check">✓</span>Convert between JSON and CSV formats</li>
@@ -78,7 +78,7 @@
 
                 <div class="contribute-card validation">
                     <div class="icon">✅</div>
-                    <h3>Validation Process</h3>
+                    <h3 id="validation-process">Validation Process</h3>
                     <p>All contributions require validation through either:</p>
                     <div class="validation-methods">
                         <div class="method">
@@ -98,13 +98,13 @@
             </div>
 
             <div class="steps-container">
-                <h2><span class="step-icon">🚀</span> Contribution Steps</h2>
+                <h2 id="contribution-steps"><span class="step-icon">🚀</span> Contribution Steps</h2>
                 
                 <div class="steps-flow">
                     <div class="step-card">
                         <div class="step-header">
                             <div class="step-number">1</div>
-                            <h3>Fork Repository</h3>
+                            <h3 id="step-fork">Fork Repository</h3>
                         </div>
                         <div class="step-content">
                             <p>Create your own copy of the project:</p>
@@ -121,7 +121,7 @@
                     <div class="step-card">
                         <div class="step-header">
                             <div class="step-number">2</div>
-                            <h3>Create Branch</h3>
+                            <h3 id="step-branch">Create Branch</h3>
                         </div>
                         <div class="step-content">
                             <p>Make a new branch for your changes</p>
@@ -136,7 +136,7 @@
                     <div class="step-card">
                         <div class="step-header">
                             <div class="step-number">3</div>
-                            <h3>Make Changes</h3>
+                            <h3 id="step-changes">Make Changes</h3>
                         </div>
                         <div class="step-content">
                             <p>Use these values in your changes:</p>
@@ -180,7 +180,7 @@
                     <div class="step-card">
                         <div class="step-header">
                             <div class="step-number">4</div>
-                            <h3>Submit PR</h3>
+                            <h3 id="step-pr">Submit PR</h3>
                         </div>
                         <div class="step-content">
                             <p>Create a pull request:</p>
@@ -197,13 +197,13 @@
 
             <div class="guidelines-section">
                 <div class="guidelines-header">
-                    <h2><span class="guidelines-icon">📋</span> Additional Guidelines</h2>
+                    <h2 id="additional-guidelines"><span class="guidelines-icon">📋</span> Additional Guidelines</h2>
                 </div>
                 
                 <div class="guidelines-grid">
                     <div class="guidelines-card">
                         <div class="card-icon">🐛</div>
-                        <h3>Reporting Issues</h3>
+                        <h3 id="reporting-issues">Reporting Issues</h3>
                         <ul class="guidelines-list">
                             <li>Check existing issues</li>
                             <li>Use latest version</li>
@@ -214,7 +214,7 @@
 
                     <div class="guidelines-card">
                         <div class="card-icon">💡</div>
-                        <h3>Feature Requests</h3>
+                        <h3 id="feature-requests">Feature Requests</h3>
                         <ul class="guidelines-list">
                             <li>Check existing proposals</li>
                             <li>Clear title</li>
