Add Aurora product to ineligible solutions section with detailed explanation

--- a/eligibility.html
+++ b/eligibility.html
@@ -192,6 +192,17 @@
                             </ul>
                         </div>
                     </div>
+                    <div class="exclusion-row">
+                        <div class="product-col">Aurora</div>
+                        <div class="primary-reason-col">Not a Full EDR Solution</div>
+                        <div class="details-col">
+                            <ul>
+                                <li>Functions as a threat detection engine rather than a complete EDR solution</li>
+                                <li>Relies on log ingestion and rule-based detection instead of real-time telemetry collection</li>
+                                <li>Does not stream telemetry data to a centralized location for real-time analysis and monitoring</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
