--- a/index.html
+++ b/index.html
@@ -149,5 +149,6 @@
     
     <!-- Add the contributors.js script -->
     <script src="js/contributors.js"></script>
+    <script src="js/heading-links.js"></script>
 </body>
 </html>
