--- a/linux.html
+++ b/linux.html
@@ -170,5 +170,6 @@
         };
     </script>
     <script src="js/linux_res_pull.js"></script>
+    <script src="js/heading-links.js"></script>
 </body>
 </html>
