--- a/mitre_mappings.html
+++ b/mitre_mappings.html
@@ -377,7 +377,6 @@
     </div>
 
     <script>
-        // Mobile navigation toggle
         document.addEventListener('DOMContentLoaded', () => {
             const menuToggle = document.querySelector('.menu-toggle');
             const navLinks = document.querySelector('.nav-links');
@@ -540,5 +539,6 @@
             setupSearch();
         });
     </script>
+    <script src="js/heading-links.js"></script>
 </body>
 </html>
