--- a/sponsorship.html
+++ b/sponsorship.html
@@ -172,15 +172,15 @@
             });
         });
     </script>
-        <div class="community-section">
-            <div class="container">    
-                <div class="section-group">
-                    <h2>Our Sponsors</h2>
-                    <div id="sponsorsSection" class="section-content">
-                        <div class="loading-spinner">
-                            <div class="spinner"></div>
-                            <p>Loading sponsors...</p>
-                        </div>
+    <script src="js/heading-links.js"></script>
+    <div class="community-section">
+        <div class="container">    
+            <div class="section-group">
+                <h2>Our Sponsors</h2>
+                <div id="sponsorsSection" class="section-content">
+                    <div class="loading-spinner">
+                        <div class="spinner"></div>
+                        <p>Loading sponsors...</p>
                     </div>
                 </div>
     
@@ -195,8 +195,9 @@
                 </div>
             </div>
         </div>
+    </div>
         
-        <!-- Add the contributors.js script -->
-        <script src="js/contributors.js"></script>
+    <!-- Add the contributors.js script -->
+    <script src="js/contributors.js"></script>
 </body>
 </html>
