--- a/windows.html
+++ b/windows.html
@@ -169,5 +169,6 @@
     </script>
 
     <script src="js/windows_res_pull.js"></script>
+    <script src="js/heading-links.js"></script>
 </body>
 </html>
