--- a/scores.html
+++ b/scores.html
@@ -171,5 +171,6 @@
     <!-- Include scripts in correct order -->
     <script src="js/scoring.js"></script>
     <script src="js/scores.js"></script>
+    <script src="js/heading-links.js"></script>
 </body>
 </html>
